<resources>
    <string name="app_name">Smart Watch</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="sign_up">Sign up</string>
    <string name="terms">I agree with terms and conditions of Smart Watch</string>
    <string name="submit">Submit</string>
    <string name="back_button">back_button</string>
    <string name="mobile_no">Mobile number</string>
    <string name="RP_1">Please type the one time password (OTP)</string>
    <string name="RP_2">sent to your registered mobile number</string>
    <string name="RP_3">to choose your new password.</string>
    <string name="heart_beat_text">Not connected</string>
    <string name="start_request">To start please press</string>
    <string name="privacy_policy">abc</string>
    <string name="about_us">xyz</string>
    <string name="your_name">Your Name</string>
    <string name="profile_d_o_b">DOB</string>

    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <array name="history">
        <item>Heart rate</item>
        <item>Blood Pressure</item>
    </array>

    <string name="title_activity_profile">ProfileActivity</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">already registered. login me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="verified">Verified</string>
    <string name="otp_msg">Please provide the OTP sent to you on</string>
    <string name="verification_code">Verification Code</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="resend_code">Resend code</string>
    <string name="instant_validation">(instant validation)</string>


    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="no_reminders">Click on the plus button below to begin creating your reminders!</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="auto">AUTO</string>
    <string name="signed_in_as">signed in as</string>
    <string name="dob">Date of birth</string>
    <string name="cancel">Cancel</string>
    <string name="details">Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
