<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images_launch_screen_background">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/icon_main_app" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Smart Watch"
        android:textColor="@color/white"
        android:textSize="25dp" />

    <FrameLayout
        android:id="@+id/frame_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/ed_user_name"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:paddingEnd="10dp"
            android:paddingStart="45dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="normal"
            android:typeface="sans" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:src="@drawable/icons_username" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frame_user_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/ed_password"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingEnd="10dp"
                android:paddingStart="45dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textStyle="normal"
                android:typeface="sans" />

        </android.support.design.widget.TextInputLayout>


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:src="@drawable/icons_password" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/frame_password"
        android:layout_below="@id/frame_password">


        <CheckBox
            android:id="@+id/remember_me_chk_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:paddingStart="12dp"
            android:text="Remember me"
            android:textColor="@color/white" />
    </FrameLayout>

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignEnd="@id/frame_user_name"
        android:layout_alignStart="@id/frame_user_name"
        android:layout_below="@id/frame_password"
        android:layout_marginTop="50dp"
        android:background="@drawable/curved_button"
        android:text="@string/sign_in"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@id/button_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:elevation="15dp"
        android:focusable="true"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/sign_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@id/tv_forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:elevation="35dp"
        android:focusable="true"
        android:text="Don't have an account? Sign Up here."
        android:textColor="@color/white"
        android:textSize="15sp" />

    <ProgressBar
        android:id="@+id/signin_progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />


</RelativeLayout>

