<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images_launch_screen_background">

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_sign_up"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <EditText
            android:id="@+id/et1"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:digits=".QWERTYUIOPLKJHGFDSAZXCVBNM "
            android:hint="Name"
            android:inputType="textCapCharacters"
            android:paddingBottom="15dp"
            android:paddingLeft="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <EditText
            android:id="@+id/et2"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:hint="Email"
            android:inputType="textWebEmailAddress"
            android:paddingBottom="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            tools:ignore="RtlHardcoded" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="75dp">

            <ImageButton
                android:id="@+id/ib_date_picker"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignBottom="@id/et3"
                android:layout_alignEnd="@id/et3"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:adjustViewBounds="true"
                android:src="@drawable/icon_calendar"
                android:focusable="true" />

            <EditText
                android:id="@+id/et3"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:focusable="false"
                android:hint="@string/dob"
                android:paddingBottom="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </RelativeLayout>


        <Spinner
            android:id="@+id/spin_gender"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:entries="@array/gender"
            android:paddingStart="5dp"
            android:paddingEnd="15dp"
            android:spinnerMode="dropdown"
            android:theme="@style/mySpinnerDropDownItemStyle"
            tools:listheader="gender" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">


            <com.hbb20.CountryCodePicker
                android:id="@+id/sign_up_ccp"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_alignBottom="@id/et4"
                android:layout_alignTop="@id/et4"
                android:backgroundTint="@color/white"
                android:gravity="bottom"
                android:paddingBottom="8dp"
                android:paddingTop="3dp"
                android:textColor="@color/white"
                app:arrowSize="20dp"
                app:contentColor="@color/white"
                app:textSize="14sp">

            </com.hbb20.CountryCodePicker>

            <EditText
                android:id="@+id/et4"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/sign_up_ccp"
                android:backgroundTint="@color/white"
                android:hint="Phone No"
                android:inputType="phone"
                android:maxLength="10"
                android:letterSpacing="0.1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <EditText
                android:id="@+id/et5"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:paddingLeft="5dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:id="@+id/et6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:paddingBottom="15dp"
                android:paddingLeft="5dp"

                />

            <TextView
                android:id="@+id/tv_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/terms"
                android:textColor="@color/white"
                android:textSize="11sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/curved_button"
            android:text="@string/submit"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/signup_progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="2dp"
            android:visibility="gone" />


    </LinearLayout>


</RelativeLayout>